@@ -6557,29 +6557,19 @@ name|get
 argument_list|)
 return|;
 block|}
-comment|/**    * Creates an znode with OPENED state.    * @param TEST_UTIL    * @param region    * @param serverName    * @return    * @throws IOException    * @throws ZooKeeperConnectionException    * @throws KeeperException    * @throws NodeExistsException    */
+comment|/**    * Gets a ZooKeeperWatcher.    * @param TEST_UTIL    */
 specifier|public
 specifier|static
 name|ZooKeeperWatcher
-name|createAndForceNodeToOpenedState
+name|getZooKeeperWatcher
 parameter_list|(
 name|HBaseTestingUtility
 name|TEST_UTIL
-parameter_list|,
-name|HRegion
-name|region
-parameter_list|,
-name|ServerName
-name|serverName
 parameter_list|)
 throws|throws
 name|ZooKeeperConnectionException
 throws|,
 name|IOException
-throws|,
-name|KeeperException
-throws|,
-name|NodeExistsException
 block|{
 name|ZooKeeperWatcher
 name|zkw
@@ -6644,6 +6634,42 @@ name|aborted
 return|;
 block|}
 block|}
+argument_list|)
+decl_stmt|;
+return|return
+name|zkw
+return|;
+block|}
+comment|/**    * Creates a znode with OPENED state.    * @param TEST_UTIL    * @param region    * @param serverName    * @return    * @throws IOException    * @throws ZooKeeperConnectionException    * @throws KeeperException    * @throws NodeExistsException    */
+specifier|public
+specifier|static
+name|ZooKeeperWatcher
+name|createAndForceNodeToOpenedState
+parameter_list|(
+name|HBaseTestingUtility
+name|TEST_UTIL
+parameter_list|,
+name|HRegion
+name|region
+parameter_list|,
+name|ServerName
+name|serverName
+parameter_list|)
+throws|throws
+name|ZooKeeperConnectionException
+throws|,
+name|IOException
+throws|,
+name|KeeperException
+throws|,
+name|NodeExistsException
+block|{
+name|ZooKeeperWatcher
+name|zkw
+init|=
+name|getZooKeeperWatcher
+argument_list|(
+name|TEST_UTIL
 argument_list|)
 decl_stmt|;
 name|ZKAssign
