@@ -1313,70 +1313,11 @@ comment|// Create a ZKW to use in the test
 name|ZooKeeperWatcher
 name|zkw
 init|=
-operator|new
-name|ZooKeeperWatcher
+name|HBaseTestingUtility
+operator|.
+name|getZooKeeperWatcher
 argument_list|(
 name|TEST_UTIL
-operator|.
-name|getConfiguration
-argument_list|()
-argument_list|,
-literal|"unittest"
-argument_list|,
-operator|new
-name|Abortable
-argument_list|()
-block|{
-name|boolean
-name|aborted
-init|=
-literal|false
-decl_stmt|;
-annotation|@
-name|Override
-specifier|public
-name|void
-name|abort
-parameter_list|(
-name|String
-name|why
-parameter_list|,
-name|Throwable
-name|e
-parameter_list|)
-block|{
-name|this
-operator|.
-name|aborted
-operator|=
-literal|true
-expr_stmt|;
-throw|throw
-operator|new
-name|RuntimeException
-argument_list|(
-literal|"Fatal ZK error, why="
-operator|+
-name|why
-argument_list|,
-name|e
-argument_list|)
-throw|;
-block|}
-annotation|@
-name|Override
-specifier|public
-name|boolean
-name|isAborted
-parameter_list|()
-block|{
-return|return
-name|this
-operator|.
-name|aborted
-return|;
-block|}
-block|}
 argument_list|)
 decl_stmt|;
 comment|// get all the master threads
