@@ -177,6 +177,22 @@ begin_import
 import|import
 name|org
 operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|zookeeper
+operator|.
+name|ZooKeeperWatcher
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
 name|junit
 operator|.
 name|Test
@@ -194,6 +210,36 @@ operator|.
 name|categories
 operator|.
 name|Category
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|zookeeper
+operator|.
+name|ZKAssign
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|HBaseTestingUtility
 import|;
 end_import
 
@@ -324,6 +370,37 @@ operator|.
 name|restartHBaseCluster
 argument_list|(
 literal|3
+argument_list|)
+expr_stmt|;
+name|ZooKeeperWatcher
+name|zkw
+init|=
+name|HBaseTestingUtility
+operator|.
+name|getZooKeeperWatcher
+argument_list|(
+name|TEST_UTIL
+argument_list|)
+decl_stmt|;
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"Waiting for no more RIT"
+argument_list|)
+expr_stmt|;
+name|ZKAssign
+operator|.
+name|blockUntilNoRIT
+argument_list|(
+name|zkw
+argument_list|)
+expr_stmt|;
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"No more RIT in ZK, now doing final test verification"
 argument_list|)
 expr_stmt|;
 comment|// everything is good again.
