@@ -103,6 +103,20 @@ name|hadoop
 operator|.
 name|hbase
 operator|.
+name|HBaseTestingUtility
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
 name|HTableDescriptor
 import|;
 end_import
@@ -179,23 +193,41 @@ begin_import
 import|import
 name|org
 operator|.
-name|junit
+name|apache
 operator|.
-name|Test
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|zookeeper
+operator|.
+name|ZKAssign
 import|;
 end_import
 
 begin_import
 import|import
-name|com
+name|org
 operator|.
-name|google
+name|apache
 operator|.
-name|common
+name|hadoop
 operator|.
-name|collect
+name|hbase
 operator|.
-name|Multimap
+name|zookeeper
+operator|.
+name|ZooKeeperWatcher
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|Test
 import|;
 end_import
 
@@ -210,6 +242,20 @@ operator|.
 name|categories
 operator|.
 name|Category
+import|;
+end_import
+
+begin_import
+import|import
+name|com
+operator|.
+name|google
+operator|.
+name|common
+operator|.
+name|collect
+operator|.
+name|Multimap
 import|;
 end_import
 
@@ -400,6 +446,37 @@ operator|.
 name|restartHBaseCluster
 argument_list|(
 literal|3
+argument_list|)
+expr_stmt|;
+name|ZooKeeperWatcher
+name|zkw
+init|=
+name|HBaseTestingUtility
+operator|.
+name|getZooKeeperWatcher
+argument_list|(
+name|TEST_UTIL
+argument_list|)
+decl_stmt|;
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"Waiting for no more RIT"
+argument_list|)
+expr_stmt|;
+name|ZKAssign
+operator|.
+name|blockUntilNoRIT
+argument_list|(
+name|zkw
+argument_list|)
+expr_stmt|;
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"No more RIT in ZK, now doing final test verification"
 argument_list|)
 expr_stmt|;
 comment|// Meta still messed up.
